文档所学到组件内容

--- a/html/instruct/表单输入绑定/v-model-1.html
+++ b/html/instruct/表单输入绑定/v-model-1.html
@@ -10,7 +10,7 @@
 
 <body>
     <div id="app">
-        <input v-model="msg" placeholder="edit me">
+        <input v-model.trim="msg" placeholder="edit me">
         <p>Message is : {{ msg }}</p>
     </div>
 
