--- a/html/instruct/表单输入绑定/单选按钮.html
+++ b/html/instruct/表单输入绑定/单选按钮.html
@@ -4,10 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>单选按钮</title>
+    <script src="../../../js/vue.js"></script>
 </head>
 <body>
 
+    <div id="example-4">
+        <input type="radio" id="one" value="One" v-model="picked">
+        <label for="one">One</label>
+        <br>
+        <input type="radio" id="two" value="Two" v-model="picked">
+        <label for="two">Two</label>
+        <br>
+        <span>Picked: {{picked}}</span>
+    </div>
     
-    
+    <script>
+        new Vue({
+            el: "#example-4",
+            data: {
+                picked: ''
+            }
+        })
+    </script>
 </body>
 </html>
