--- a/html/instruct/表单输入绑定/单选按钮.html
+++ b/html/instruct/表单输入绑定/单选按钮.html
@@ -9,7 +9,7 @@
 <body>
 
     <div id="example-4">
-        <input type="radio" id="one" value="One" v-model="picked">
+        <input type="radio" id="one" value="One" v-model="picked" v-bind:value="a">
         <label for="one">One</label>
         <br>
         <input type="radio" id="two" value="Two" v-model="picked">
